Fixed a bug where you couldn't click on links on mobile because of a bad touch event

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -34,15 +34,7 @@ a{z-index: 50;}
 }
 
 @media screen and (min-width: 700px){
-  #sketch-container{
-    display: block;
-    position: fixed;
-    width: 100%;
-    height: 100%;
 
-    top: 0px;
-    left: 0px;
-  }
 
   .main-container {
     padding-top: 20px;
@@ -93,6 +85,18 @@ a{z-index: 50;}
 
 }
 
+@media screen and (min-width: 769px){
+  #sketch-container{
+    display: block;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+
+    top: 0px;
+    left: 0px;
+  }
+}
+
 @media screen and (min-width: 975px){
   .main-container {
     margin: 0 auto;
@@ -140,12 +144,8 @@ a{z-index: 50;}
   top: 3px;
 }
 
-.rotate{
-  transform: rotate(180deg);
-}
-
 .nav-container a {
-  margin-right: 20px;
+  padding-right: 20px;
   line-height: 25px;
 }
 
